--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   ],
   "type": "commonjs",
   "exports": {
-    "." : [ { "default": "./lib/index.js" }, "./lib/index.js" ]
+    ".": [
+      {
+        "default": "./lib/index.js",
+        "types": "./lib/index.d.ts"
+      },
+      "./lib/index.js"
+    ]
   },
   "scripts": {
     "lint": "npx standard",
